[package]
name = "kronos"
version = "0.1.0"
description = "Kronos luxury watch perpetual futures protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "kronos"

[features]
default = []
mainnet = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []
init-if-needed = ["anchor-lang/init-if-needed"]

[dependencies]
anchor-lang = { version = "1.0.2", features = ["init-if-needed"] }
anchor-spl = { version = "1.0.2", features = ["token"] }
solana-security-txt = "1.1.1"

[dev-dependencies]
litesvm = "0.10.0"
solana-message = "3.0.1"
solana-transaction = "3.0.2"
solana-signer = "3.0.0"
solana-keypair = "3.0.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
